tests/sema/fail/v5_fail_str_len_field.ep
# COMPILE_FAIL: unknown field str.len

fun main(): void {
    let s = "abc"
    let n = s.len
}
